--- a/library-app/src/index.css
+++ b/library-app/src/index.css
@@ -216,6 +216,14 @@ footer {
   margin: 10px;
 }
 
+.book-card-title {
+  max-height: 3em; /* Adjust the height to limit the number of lines */
+  width: 100%;
+  overflow: hidden;
+  white-space: nowrap;
+  text-overflow: ellipsis;
+}
+
 .carousel-item img {
   max-width: 100%;
   height: 210px;
@@ -233,4 +241,15 @@ footer {
 .carousel-button:disabled i {
   color: #ccc;
   cursor: not-allowed;
+}
+
+.add-to-cart {
+  width: 25%;
+  margin-top: 30px;
+  background-color: #8bc391;
+  color: white;
+}
+
+.add-to-cart:active {
+  background-color: #698c6c;
 }
