Update css for responsivity
- footer
- listing page
- book page
- carousel

--- a/index.css
+++ b/index.css
@@ -1,9 +1,15 @@
+html {
+  position: relative;
+  min-height: 100%;
+}
+
 :root {
   font-family: "Poppins", sans-serif;
   line-height: 1.5;
   font-weight: 400;
 
   margin: 0 auto;
+  
 
   color-scheme: light dark;
   color: rgba(255, 255, 255, 0.87);
@@ -16,22 +22,34 @@
   -webkit-text-size-adjust: 100%;
 }
 
+#root {
+  min-height: 100%;
+}
+
 a {
   font-weight: 500;
   color: black;
-  text-decoration: inherit;
 }
 a:hover {
   color: grey;
+  text-decoration: none;
 }
 
 body {
-  margin: 0;
   place-items: center;
   min-width: 320px;
-  min-height: 100vh;
+  min-height: 100%;
   background-color: #f9efe4;
   position: relative;
+  margin: 0;
+}
+
+.site-wrapper {
+  min-height: 100%;
+}
+
+main {
+  padding-bottom: 50px;
 }
 
 h1 {
@@ -119,11 +137,17 @@ button {
   background-color: #e3ab9a;
   color: #fff;
   border-radius: 0 25px 25px 0;
-  border: solid #e3ab9a;  
+  border: solid #e3ab9a;
 }
 
-.search > div > button:hover {
+.search > button:hover {
   background-color: #CC998A;
+  border: solid #CC998A;
+}
+
+.search > button:active {
+  background-color: #CC998A;
+  border: solid #CC998A;
 }
 
 /* resize navbar on medium screens */
@@ -146,16 +170,16 @@ button {
 }
 
 footer {
-  position: absolute;
-  bottom: 0;
   display: flex;
   align-items: center;
   justify-content: center;
   color: #f9efe4;
   background-color: grey;
-  margin: 0px -40px 0px -40px;
-  padding: 0px 20px;
+  padding: 10px 0px;
   width: 100%;
+  position: absolute;
+  bottom: -50px;
+  height: 50px;
 }
 
 .not-found {
@@ -174,10 +198,16 @@ footer {
   font-weight: 900;
 }
 
+.homepage-title {
+  display: flex;
+  justify-content: center;
+  margin: 5%;
+}
+
 .books-listing {
   display: grid;
   grid-template-columns: repeat(auto-fill, minmax(300px, 1fr)); /* Adjust the minimum and maximum width as needed */
-  gap: 20px;
+  gap: 80px 20px;
   justify-content: space-evenly;
   margin: 150px 30px 0px 30px;
 }
@@ -186,6 +216,7 @@ footer {
   display: flex;
   flex-direction: column;
   align-items: center;
+  gap: 15px;
 }
 
 .book-card:hover {
@@ -193,21 +224,25 @@ footer {
 }
 
 .book-card-img {
-  width: 160px;
-  min-height: 188px;
+  display: flex;
+  justify-content: center;
+  align-items: center;
+  height: 188px;
 }
 
 .book-card-img > img {
   box-shadow: 5px 5px 10px rgba(0, 0, 0, 0.5);
   border-radius: 5px;
+  height: 100%;
+  width: auto;
 }
 
 .book {
   display: flex;
-  align-items: flex-start;
   justify-content: space-around;
   gap: 60px;
   text-align: justify;
+  flex-wrap: wrap;
   margin: 100px 60px;
 }
 
@@ -219,7 +254,7 @@ footer {
 }
 
 .book-info {
-  width: 70%;
+  width: 60%;
   padding: 0px 20px;
   display: flex;
   flex-direction: column;
@@ -239,27 +274,37 @@ footer {
 .carousel-items {
   display: flex;
   justify-content: space-between;
+  flex-wrap: nowrap;
   overflow: hidden;
   width: 100%;
 }
 
 .carousel-item {
   width: calc(33.33% - 20px);
+  min-width: 180px;
   padding: 10px;
   margin: 10px;
 }
 
 .book-card-title {
-  max-height: 3em; /* Adjust the height to limit the number of lines */
+  display: inline;
+  text-align: center;
+  max-height: 3em;
   width: 100%;
   overflow: hidden;
   white-space: nowrap;
   text-overflow: ellipsis;
+  margin: 0;
+}
+
+.book-card-author {
+  margin: 0;
 }
 
 .carousel-item img {
   max-width: 100%;
   height: 210px;
+  max-height: 100%;
 }
 
 .carousel-button {
@@ -277,10 +322,10 @@ footer {
 }
 
 .add-to-cart {
-  width: 25%;
   margin-top: 30px;
   background-color: #8bc391;
   color: white;
+  max-width: fit-content;
 }
 
 .add-to-cart:active {
